--- a/api-fe/package.json
+++ b/api-fe/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
+    "ngx-mask": "^14.2.4",
     "ngx-spinner": "^14.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
