--- a/api-fe/package.json
+++ b/api-fe/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
     "ngx-mask": "^14.2.4",
+    "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^14.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
